# srt-clean

./: AGENT.md  AGENTS.md  README.md  pyproject.toml  tmp_translate_srt_ollama.py
docs/: CODEX-RUNBOOK.md  README.md  SDD-ARCH-python-project-structure.md  SDD-CR-001-ollama-qwen3-translation-shell.md  SDD-DOCS-STYLE.md  SDD-P0-implementation-plan.md  SDD-TESTING.md  SDD-srt-clean.md
profiles/: README.md  en-adult-soft.yml  en-translation-soft.yml  jp-adult-soft.yml
scripts/: README.md  check.sh  install.sh  translate-with-ollama.sh  uninstall.sh
src/: README.md
src/srt_clean/: README.md  __init__.py  actions.py  cli.py  decisions.py  models.py  normalize.py  parser.py  profile.py  report.py  rules.py  writer.py
tests/: README.md  test_apply_mode.py  test_clean_mode.py  test_cli.py  test_decisions.py  test_normalize.py  test_parser.py  test_profile.py  test_profile_translation.py  test_report_mode.py  test_rules_en.py  test_rules_jp.py  test_translate_script.py  test_writer.py
tests/fixtures/: README.md  basic_multiline.input.srt  en_rules.input.srt  jp_adjacent_duplicate.input.srt  jp_batch_bc.expected.aggressive.cleaned.srt  jp_batch_bc.expected.moderate.cleaned.srt  jp_batch_bc.input.srt  malformed_timecode.input.srt  non_contiguous.input.srt  translate_script.input.srt
